<?xml version="1.0"?>
<package format="2">
  <name>thorvald_panda_2dnav</name>
  <version>0.0.0</version>
  <description>The thorvald_2dnav package</description>

  <maintainer email="venkatesh@todo.todo">venkatesh</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>move_base</build_depend>

  <build_depend>thorvald_sensor_configuration_dep</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>nav_msgs</build_depend>

  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>thorvald_sensor_configuration_dep</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>

  <exec_depend>move_base</exec_depend>
  <exec_depend>thorvald_sensor_configuration_dep</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>


  <export>

  </export>
</package>
